# InterProcessPyObjects

./: .gitignore  NOTICE  README.md  env_activate.sh  env_create.sh  pyproject.toml  requirements.txt  upload_to_pypi.sh
example/: receiver.py  sender.py  shared_objects__types.py
ipc_py_objects/: __init__.py
ipc_py_objects/versions/: __init__.py
ipc_py_objects/versions/v_0/: __init__.py
ipc_py_objects/versions/v_1/: __init__.py
