[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "InterProcessPyObjects"
dynamic = ["version"]
description = "This high-performance package delivers blazing-fast inter-process communication through shared memory, enabling Python objects to be shared across processes with exceptional efficiency"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "ButenkoMS", email = "gtalk@butenkoms.space" },
]
keywords = [
    "cengal",
    "crossplatform",
    "inter-process communication",
    "IPC",
    "shared memory",
    "shared object",
    "shared objects",
    "multiprocessing",
    "shared dict",
    "shared set",
    "shared numpy ndarray",
    "shared torch Tensor",
    "Windows",
    "Linux",
    "macOS",
    "Android",
    "iOS",
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Web Environment',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications',
    'Framework :: AsyncIO',
    'Framework :: Celery',
    'Framework :: Django',
    'Framework :: FastAPI',
    'Framework :: Flask',
    'Framework :: Jupyter',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Financial and Insurance Industry',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Manufacturing',
    'Intended Audience :: Other Audience',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Android',
    'Operating System :: MacOS',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft',
    'Operating System :: Microsoft :: Windows :: Windows 7',
    'Operating System :: Microsoft :: Windows :: Windows 8',
    'Operating System :: Microsoft :: Windows :: Windows 8.1',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows Server 2008',
    'Operating System :: Microsoft :: Windows :: Windows Vista',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: POSIX :: BSD :: NetBSD',
    'Operating System :: POSIX :: BSD :: OpenBSD',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: Other',
    'Operating System :: Unix',
    'Operating System :: iOS',
    'Programming Language :: C',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: MicroPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Unix Shell',
    'Topic :: Adaptive Technologies',
    'Topic :: Communications',
    'Topic :: Games/Entertainment',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Multimedia',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Artificial Life',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Hardware',
    'Topic :: System :: Hardware :: Symmetric Multi-processing',
    'Typing :: Typed',
]
dependencies = [
    "numpy",
    "py-cpuinfo",
    "cengal_light",
]

[project.urls]
Homepage = "https://github.com/FI-Mihej/InterProcessPyObjects"

[tool.hatch.version]
path = "ipc_py_objects/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ipc_py_objects",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/ipc_py_objects",
]